app/styles/front.css
.front__nav-items-container {
  display: grid;
  max-width: 340px;
  margin: 0 auto;
  column-gap: var(--s-4);
  font-size: 13px;
  grid-template-columns: 1fr 1fr 1fr;
  row-gap: var(--s-4);
}

.front__nav-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: var(--text);
  font-weight: bold;
  gap: var(--s-1);
  text-align: center;
}

.front__log-in-button {
  display: grid;
  width: 50px;
  height: 50px;
  border: none;
  border-radius: 100%;
  background-color: var(--bg-lighter);
  place-items: center;
  transition: all 0.2s ease-out;
}

.front__nav-image-container {
  display: grid;
  width: 75px;
  height: 75px;
  border-radius: var(--rounded);
  background-color: var(--bg-lighter);
  place-items: center;
  transition: all 0.2s ease-out;
}

.front__nav-image-container.round {
  width: 50px;
  height: 50px;
  border-radius: 100%;
}

.front__avatar {
  width: 50px;
  height: 50px;
}

.front__nav-image-container:hover {
  background-color: var(--theme-transparent);
}

.front__log-out-container {
  display: flex;
  justify-content: center;
}

.front__drawings {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-block-start: var(--s-8);
}

.front__drawing-img {
  max-height: 175px;
}

@media screen and (min-width: 400px) {
  .front__drawing-img {
    max-height: 200px;
  }
}

@media screen and (min-width: 600px) {
  .front__drawing-img {
    max-height: 300px;
  }
}

@media screen and (min-width: 800px) {
  .front__drawing-img {
    max-height: 400px;
  }
}

.front__drawings__boy {
  z-index: 10;
  grid-column: 1 / 2;
  grid-row: 1;
}

.front__drawings__girl {
  z-index: 10;
  grid-column: 2 / 3;
  grid-row: 1;
  justify-self: flex-end;
}

.front__drawings__girl.bg {
  z-index: 1;
}

.front__drawings__boy.bg {
  z-index: 1;
}

@media screen and (min-width: 640px) {
  .front__nav-item.round {
    display: none;
  }

  .front__log-out-container {
    display: none;
  }
}

